refactor buttons to use set width and height to match design

--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -14,6 +14,8 @@
   @include fontSmooth;
   box-shadow: var(--shadow-xs);
   transition: all 0.2s ease;
+  width: 9.5rem; //buttons are same width no matter the content
+  height: 3.5rem; //buttons are same height no matter the content
 
   &:hover {
     box-shadow: var(--shadow-sm);
