--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -26,6 +26,7 @@
       gap: 1.5625rem;
     }
 
+
     .form-action-group {
       justify-self: center;
       margin-top: 1rem;
@@ -40,12 +41,14 @@
       padding: 4.375rem 3.625rem;
       text-align: left;
 
-      p {
-        max-width: 100%;
-      }
+
 
       &__article {
         justify-items: start;
+
+        p {
+          max-width: 100%;
+        }
       }
 
      .form-action-group {
@@ -63,8 +66,10 @@
       padding: 3.4375rem var(--hero-padding-x);
       grid-template-columns: calc(var(--bg-image-radius) - var(--hero-padding-x)) 1fr;
 
-      p {
-        max-width: 47ch;
+      &__article {
+        p {
+          max-width: 47ch;
+        }
       }
     }
   }
