--- a/main/assets/css/components/_wide_card.scss
+++ b/main/assets/css/components/_wide_card.scss
@@ -8,9 +8,10 @@
   padding: 4rem 1.5rem;
   display: grid;
   place-items: center;
-  gap: 2rem;
+  gap: 1.7rem;
   position: relative;
   z-index: 0;
+  overflow: hidden;
 
   &.wide-card--flip-horizontal{
      --bg-transform: rotateY(180deg);
@@ -46,9 +47,17 @@
     max-width: 45ch;
   }
 
+  .text-component {
+      --text-vspace-multiplier: 2;
+  }
+
   @include breakpoint(sm) {
     background-position: left center;
     padding: 3.625rem;
+
+    .text-component {
+       --text-vspace-multiplier: 1.4;
+    }
   }
 
   @include breakpoint(md) {
@@ -56,9 +65,11 @@
     background-position: right center;
     grid-template-columns: repeat(2, auto);
     justify-content: space-between;
+    gap: 2rem;
 
     .text-component {
       justify-items: start;
+      --text-vspace-multiplier: 1.7;
     }
   }
 }
