working with simpler setup

--- a/main/assets/css/components/_map_card.scss
+++ b/main/assets/css/components/_map_card.scss
@@ -1,9 +1,10 @@
 .map-card {
   display: grid;
-  grid-auto-rows: 20.375rem;
+  grid-template-rows: 20.375rem auto;
 
   &__image {
     overflow: hidden;
+    grid-row: 1;
 
     img {
       height: 100%;
@@ -18,17 +19,9 @@
     --bg-position-y: bottom;
     --bg-size: 80%;
     padding: 5.5rem 6rem;
-
-  }
-
-  &__details {
     display: grid;
-    grid-template-columns: 1.8fr 2fr;
-    .text-component {
-      --text-vspace-multiplier: 0.2;
-    }
+    row-gap: 24px;
   }
-
 
   @include breakpoint(sm) {
     gap: 1.875rem;
@@ -37,18 +30,22 @@
       border-radius: var(--radius);
     }
 
+    &__intro {
+      grid-template-columns: repeat(2, 1fr);
+
+      h1 {
+        grid-column: span 2;
+      }
+    }
+
   }
 
 
   @include breakpoint(lg) {
     grid-auto-flow: column;
 
-    &__image {
-      width: 350px;
-    }
-
     &__intro {
-    width: 730px;
+      width: 730px;
     }
 
     &__image--right {
