refactored code to use utility class for border radius

--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -6,6 +6,10 @@
  --bg-image: url(../images/home/desktop/bg-pattern-hero-home.svg);
 }
 
+.border-radius {
+  border-radius: var(--radius);
+}
+
   .bg-primary {
     color: var(--color-white);
   }
