add comments to improve readability

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -5,6 +5,7 @@
 header {
 
   .hero {
+    //set the position of the background circle
     --bg-position-x: left;
     --bg-position-y: top 6.5rem;
     --bg-size: 150%;
