--- a/main/assets/css/components/_example_card.scss
+++ b/main/assets/css/components/_example_card.scss
@@ -1,3 +1,19 @@
+  // +++++++++++++++++++++++
+  // ++ EXAMPLE CARDS  ++
+  // +++++++++++++++++++++++
+
+
+  .examples__cards {
+    display: grid;
+    gap: var(--space-xxl);
+
+    @include breakpoint(md) {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1.875rem;
+    }
+  }
+
+
 // +++++++++++++++++++++++
 // ++ EXAMPLE CARD  ++
 // +++++++++++++++++++++++
