--- a/main/assets/css/components/_wide_card.scss
+++ b/main/assets/css/components/_wide_card.scss
@@ -41,12 +41,9 @@
   &__title {
     max-width: 15ch;
   }
+
   &__text {
     max-width: 45ch;
-  }
-
-  .text-component {
-      --text-vspace-multiplier: 2;
   }
 
   @include breakpoint(sm) {
@@ -61,7 +58,7 @@
 
   @include breakpoint(md) {
     padding: 4.5rem 6rem;
-    background-position: right center;
+    // background-position: right center; //I don;' think I need this
     grid-template-columns: repeat(2, auto);
     justify-content: space-between;
     gap: 2rem;
