--- a/main/assets/css/components/_photo_card.scss
+++ b/main/assets/css/components/_photo_card.scss
@@ -11,6 +11,7 @@
     padding: 80px 24px;
     display: grid;
     place-content: center;
+    --text-vspace-multiplier: 2.8;
   }
 
   &__photo img {
@@ -24,6 +25,7 @@
 
     &__content {
       padding: 4.25rem 3.625rem;
+      --text-vspace-multiplier: 2;
     }
   }
 
