move defaults for bg circle into bg-circle class

--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -1,10 +1,3 @@
-  :root {
- --bg-position-x: left;
- --bg-position-y: center;
- --bg-repeat: no-repeat;
- --bg-size: 100%;
- --bg-image: url(../images/home/desktop/bg-pattern-hero-home.svg);
-}
 
 .bg-black-light {
   color: var(--color-white);
@@ -16,8 +9,8 @@
 }
 
 .bg-circle {
-  background-image:  var(--bg-image);
-  background-repeat: var(--bg-repeat);
-  background-position: var(--bg-position-x) var(--bg-position-y);
-  background-size: var(--bg-size);
+  background-image:  var(--bg-image, url(../images/home/desktop/bg-pattern-hero-home.svg));
+  background-repeat: var(--bg-repeat, no-repeat);
+  background-position: var(--bg-position-x, left) var(--bg-position-y, center);
+  background-size: var(--bg-size, 100%);
 }
