--- a/main/assets/css/components/_design_card.scss
+++ b/main/assets/css/components/_design_card.scss
@@ -4,8 +4,8 @@
   background-position: right bottom 1.875rem;
   padding: 6.5625rem 1.5rem;
   display: grid;
-  row-gap: 1.75rem;
   place-items: center;
+  --text-vspace-multiplier: 3;
 
   p {
     text-align: center;
@@ -16,5 +16,6 @@
     background-position: right -10rem center;
     border-radius: var(--radius);
     padding: 4rem 1.5rem;
+     --text-vspace-multiplier: 1.5;
   }
 }
